# risc0-debt-allocator

./: Cargo.toml  run.sh
apps/: Cargo.toml
methods/guest/: Cargo.toml
