[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6.4", default-features = false, features = [
  "rlp",
  "serde",
  "std",
] }
alloy-sol-types = { version = "0.6.4" }
risc0-zkvm = { version = "0.21", default-features = false, features = ['std'] }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.10" }


[profile.release]
lto = "thin"
